# PoorCraftultra

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Game.cs  GameWindow.cs  IMPLEMENTATION_SUMMARY.md  INVENTORY_UI_SMOKE_TEST.md  LICENSE  PHASE2_IMPLEMENTATION_STATUS.md  PLAYTEST.md  PoorCraftUltra.csproj  Program.cs  README.md  Specifications.md  TESTING_GUIDE.md  UV_TILING_FIX_SUMMARY.md  VERIFICATION_FIXES.md  VULKAN_SHADER_UPDATE.md  build.gradle  build.gradle.kts  gen_trace.txt  generate_textures.py  gradle.properties  gradlew  icon.svg.import  project.godot  run_inventory_test.bat  settings.gradle  settings.gradle.kts  troubleshooting1.0.md
src/: CMakeLists.txt  main.cpp
src/core/: Camera.cpp  GPUInfo.cpp  GameState.cpp  Input.cpp  Inventory.cpp  Player.cpp  Timer.cpp  Window.cpp
src/main/java/com/poorcraft/ultra/app/: ClientConfig.java  ConfigLoader.java  ConfigSaver.java  LoggingConfig.java  Main.java  ServiceHub.java  SystemInfo.java
src/main/java/com/poorcraft/ultra/audio/: .gitkeep
src/main/java/com/poorcraft/ultra/blocks/: .gitkeep  BlockDefinition.java  BlockFace.java  BlockRegistry.java
src/main/java/com/poorcraft/ultra/crafting/: .gitkeep  CraftingGrid.java  CraftingListener.java  Recipe.java  RecipeBook.java  RecipeRegistry.java  RecipeType.java
src/main/java/com/poorcraft/ultra/engine/: DebugOverlayAppState.java  DebugOverlayFormatter.java  FpsCounterAppState.java  PoorcraftApp.java  PoorcraftEngine.java
src/main/java/com/poorcraft/ultra/gameplay/: CraftingManager.java  CraftingRecipe.java  ItemDropTable.java  ItemStack.java
src/main/java/com/poorcraft/ultra/inventory/: .gitkeep  InventoryAppState.java  InventoryListener.java  ItemStack.java  PlayerInventory.java
src/main/java/com/poorcraft/ultra/items/: .gitkeep  ItemDefinition.java  ItemRegistry.java  ToolTier.java  ToolType.java
src/main/java/com/poorcraft/ultra/mobs/: .gitkeep
src/main/java/com/poorcraft/ultra/player/: .gitkeep  BlockHighlighter.java  BlockInteraction.java  BlockPicker.java  FirstPersonController.java  GameSessionAppState.java  PlayerController.java  PlayerInventory.java  ToolType.java
src/main/java/com/poorcraft/ultra/save/: .gitkeep  ChunkSerializer.java  PlayerData.java  SaveManager.java  WorldMetadata.java
src/main/java/com/poorcraft/ultra/smelting/: .gitkeep  BlockEntityManager.java  FuelRegistry.java  FurnaceAppState.java  FurnaceBlockEntity.java  SmeltingRecipe.java  SmeltingRecipeRegistry.java
src/main/java/com/poorcraft/ultra/tools/: AssetManifest.java  AssetValidationException.java  AssetValidator.java  AssetValidatorCLI.java  TextureAtlasBuilder.java  ValidationResult.java
src/main/java/com/poorcraft/ultra/ui/: CraftingUIState.java  GameStateManager.java  InGameState.java  InputConfig.java  MainMenuAppState.java  MainMenuState.java  PauseMenuState.java  SettingsMenuState.java  UIScaleProcessor.java
src/main/java/com/poorcraft/ultra/voxel/: .gitkeep  BlockRegistry.java  BlockType.java  Chunk.java  ChunkConstants.java  ChunkDoctorService.java  ChunkManager.java  ChunkMesh.java  ChunkMesher.java  ChunkRenderer.java  Direction.java  GreedyMesher.java  LightEngine.java  MeshData.java  TextureAtlas.java
src/main/java/com/poorcraft/ultra/weather/: .gitkeep  WeatherManager.java
src/main/java/com/poorcraft/ultra/world/: .gitkeep  BiomeDefinition.java  BiomeMap.java  BiomeProvider.java  BiomeType.java  CaveCarver.java  ChecksumUtil.java  ChunkPopulator.java  FeaturePopulator.java  HeightmapGenerator.java  RegionFile.java  RegionFileHeader.java  TerrainGenerator.java  WorldGenerator.java  WorldSaveManager.java
src/main/java/com/poorcraftultra/: Main.java
src/main/java/com/poorcraftultra/core/: Camera.java  Engine.java  Frustum.java  Game.java  Renderer.java  Shader.java  Window.java
src/main/java/com/poorcraftultra/input/: InputAction.java  InputManager.java  KeyboardInput.java  MouseInput.java
src/main/java/com/poorcraftultra/player/: Player.java  PlayerController.java
src/main/java/com/poorcraftultra/rendering/: Camera.java  Mesh.java  Renderer.java  ShaderProgram.java  TextureAtlas.java
src/main/java/com/poorcraftultra/util/: Constants.java
src/main/java/com/poorcraftultra/world/block/: Block.java  BlockFace.java  (+3 more)
src/main/resources/: logback.xml
src/main/resources/Textures/blocks/: manifest.json
src/main/resources/Textures/items/: manifest.json
src/main/resources/Textures/skins/: manifest.json
src/main/resources/shaders/: fragment.glsl  vertex.glsl
src/rendering/: Frustum.cpp  OpenGLRenderer.cpp  RendererFactory.cpp  TextureAtlas.cpp  VulkanRenderer.cpp
src/test/java/com/poorcraftultra/core/: CameraTest.java  FrustumTest.java  GLTestContext.java  RendererTest.java  ShaderTest.java  WindowTest.java
src/test/java/com/poorcraftultra/input/: InputManagerTest.java  KeyboardInputTest.java  MouseInputTest.java
src/test/java/com/poorcraftultra/integration/: InputCameraIntegrationTest.java  RenderingPerformanceTest.java  VisualRenderingTest.java  WindowIntegrationTest.java
src/test/java/com/poorcraftultra/player/: PlayerControllerTest.java  PlayerTest.java
src/test/java/com/poorcraftultra/rendering/: CameraTest.java  MeshTest.java  RendererTest.java  ShaderProgramTest.java  TextureAtlasTest.java
src/test/resources/shaders/: bad_fragment.glsl  bad_vertex.glsl  incompatible_fragment.glsl
src/ui/: HUD.cpp  MainMenuUI.cpp  PauseMenuUI.cpp  SettingsUI.cpp  UIManager.cpp
src/world/: Block.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMesh.cpp  ChunkMesher.cpp  Raycaster.cpp  TerrainGenerator.cpp
tests/: CMakeLists.txt  README_MANUAL_TESTS.md  basic_test.cpp  block_interaction_test.cpp  block_test.cpp  build.gradle.kts  camera_test.cpp  chunk_manager_test.cpp  chunk_mesher_ao_test.cpp  chunk_mesher_test.cpp  chunk_test.cpp  collision_test.cpp  game_state_test.cpp  gpu_detection_test.cpp  input_test.cpp  inventory_test.cpp  player_test.cpp  raycaster_test.cpp  renderer_test.cpp  renderer_texture_test.cpp  terrain_generator_test.cpp  texture_atlas_test.cpp  timer_test.cpp  ui_manager_test.cpp  window_test.cpp
(+306 files in other folders)
